[BUGFIX] styleguide: "Improve" link visibility

--- a/typo3/sysext/styleguide/Resources/Public/Css/styles.css
+++ b/typo3/sysext/styleguide/Resources/Public/Css/styles.css
@@ -62,3 +62,6 @@ div.icon-set li:hover {
 div.icon-set li span {
 	margin-bottom: 5px;
 }
+a {
+	text-decoration: underline;
+}
